--- a/2023.05.28-Homework-4/2023.05.28-Homework-4/2023.05.28-Homework-4.vcxproj.filters
+++ b/2023.05.28-Homework-4/2023.05.28-Homework-4/2023.05.28-Homework-4.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Source.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="BinaryTreeNode.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BinaryTreeNode.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
