--- a/2023.05.28-Homework-4/2023.05.28-Homework-4/2023.05.28-Homework-4.vcxproj
+++ b/2023.05.28-Homework-4/2023.05.28-Homework-4/2023.05.28-Homework-4.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BinaryTreeNode.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BinaryTreeNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
